test/error.txt
(venv) п„…п„…п„… пЃ»  test п‚›  git:(testing) пЂЌ sudo venv/bin/python main.py 
Traceback (most recent call last):
  File "/home/tpad/Documents/nsm_tools/yoda/test/main.py", line 29, in <module>
    import nsm_voice_agent
  File "/home/tpad/Documents/nsm_tools/yoda/test/nsm_voice_agent.py", line 21, in <module>
    from livekit.agents import JobContext, WorkerOptions, cli
  File "/home/tpad/Documents/nsm_tools/yoda/test/venv/lib/python3.14/site-packages/livekit/agents/__init__.py", line 23, in <module>
    from . import cli, inference, ipc, llm, metrics, stt, tokenize, tts, utils, vad, voice
  File "/home/tpad/Documents/nsm_tools/yoda/test/venv/lib/python3.14/site-packages/livekit/agents/cli/__init__.py", line 1, in <module>
    from .cli import AgentsConsole, run_app
  File "/home/tpad/Documents/nsm_tools/yoda/test/venv/lib/python3.14/site-packages/livekit/agents/cli/cli.py", line 27, in <module>
    import typer
  File "/home/tpad/Documents/nsm_tools/yoda/test/venv/lib/python3.14/site-packages/typer/__init__.py", line 29, in <module>
    from .main import Typer as Typer
  File "/home/tpad/Documents/nsm_tools/yoda/test/venv/lib/python3.14/site-packages/typer/main.py", line 20, in <module>
    from typer._types import TyperChoice
  File "/home/tpad/Documents/nsm_tools/yoda/test/venv/lib/python3.14/site-packages/typer/_types.py", line 9, in <module>
    class TyperChoice(click.Choice[ParamTypeValue]):
                      ~~~~~~~~~~~~^^^^^^^^^^^^^^^^
TypeError: type 'Choice' is not subscriptable
(venv) п„…п„…п„… пЃ»  test п‚›  git:(testing) пЂЌ           
